# sortd

./: .gitignore  .mypy.ini  Makefile  README.md  _config.yaml  dependabot.yml  lib.py  lint.sh  mypy.ini  pyproject.toml  requirements.txt  scfg  setup.py  sini  sjson  slines  sortd  splist  stoml  syaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
_sortd/: __main__.py  consts.py  lib.py  main.py  s_cfg.py  s_csv.py  s_json.py  s_lines.py  s_plist.py  s_toml.py  s_yaml.py
docker/: Dockerfile  ci.sh
sortd/: __main__.py  consts.py  lib.py  lines.py  s_cfg.py  s_csv.py  s_ini.py  s_json.py  s_toml.py  s_yaml.py
sortd_lib/: lib.py  s_cfg.py  s_csv.py  s_json.py  s_plist.py  s_yaml.py
tests/: csv.csv  json.json  toml.toml  txt.txt  yaml.yaml
