[project]
authors         = [{ name = "ms-jpq", email = "github@bigly.dog" }]
description     = "sorting commands for stdin -> stdout"
name            = "sortd"
readme          = "README.md"
requires-python = ">=3.8.0"
version         = "1.2.0"

dependencies = [
]
[project.optional-dependencies]
dev  = ["mypy", "types-PyYAML", "types-toml"]
dist = ["wheel"]

[project.urls]
homepage = "https://github.com/ms-jpq/sortd"


[project.scripts]
"sortd" = "sortd.__main__:main"
